update version and implementation